fix: 쿠키 정보 조회 API 에서 액세서리 추가